--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap');
 
+/*
+I lovee this code
+*/
+
 body {
     font-family:'Open Sans', sans-serif;
     color:gray;
