--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@ body {
     color:gray;
     border: 1px solid gray;
     margin: 10px;
-    background-color: white;
+    background-color: gray;
 } 
 
 header{
